--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -22,7 +22,7 @@ spec:
         # Delete any existing contents of the directory if it exists.
         #
         # We don't just "rm -rf ${WORKSPACE_SOURCE_PATH}" because ${WORKSPACE_SOURCE_PATH} might be "/"
-        # or the root of a mounted volume.
+        # or thels root of a mounted volume.
         if [ -d "${WORKSPACE_SOURCE_PATH}" ] ; then
           # Delete non-hidden files and directories
           rm -rf "${WORKSPACE_SOURCE_PATH:?}"/*
